--- a/doc/manual/viennagrid.tex
+++ b/doc/manual/viennagrid.tex
@@ -91,11 +91,11 @@
 
 \include{introduction} %DONE
 \include{installation} %DONE
-\include{entities}     %Updates required
+\include{entities}     %DONE, but updates required
 \include{domainconfig} %DONE
 \include{domainsetup}  %DONE
-\include{iterators}
-\include{algorithms}
+\include{iterators}    %DONE, but updates required
+\include{algorithms}   %DONE
 \include{io}
 \include{data}
 %\include{benchmarks}  %Will be added in some later release. A single day has 24 hours only ;-)
